tests/outref/TUC007.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: C.INVALIDE
Error with syntax near (line 4, column 4):

select invalidA, invalidB, invalidC, invalidD
from names c
inner join names o
on c.invalidE = o.invalidF
   ^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: O.INVALIDF
Error with syntax near (line 4, column 17):

select invalidA, invalidB, invalidC, invalidD
from names c
inner join names o
on c.invalidE = o.invalidF
                ^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: INVALIDA
Error with syntax near (line 1, column 7):

select invalidA, invalidB, invalidC, invalidD
       ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: INVALIDB
Error with syntax near (line 1, column 17):

select invalidA, invalidB, invalidC, invalidD
                 ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: INVALIDC
Error with syntax near (line 1, column 27):

select invalidA, invalidB, invalidC, invalidD
                           ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: INVALIDD
Error with syntax near (line 1, column 37):

select invalidA, invalidB, invalidC, invalidD
                                     ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select invalidA, invalidB, invalidC, invalidD
from names c
inner join names o
on c.invalidE = o.invalidF

